<resources>
    <string name="app_name">Student Alert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="scholarship_title">SCHOLARSHIP</string>
    <string name="jobs_title">JOBS</string>
    <string name="internships_title">INTERNSHIPS</string>
    <string name="attachments_title">ATTACHMENTS</string>
    <string name="conferences_title">CONFERENCES</string>
    <string name="communicate_title">COMMUNICATE</string>
    <string name="send_title">Send</string>
    <string name="share_title">Share</string>
    <string name="email_dev_title">Email Developer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="attachment">Attachments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
